<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="collection_category"
        android:title="@string/data_source_settings">

        <ListPreference
            android:defaultValue="Disabled"
            android:entries="@array/DexCollectionMethods"
            android:entryValues="@array/DexCollectionMethodValues"
            android:key="dex_collection_method"
            android:summary="@string/how_receive_data"
            android:title="@string/hardware_data_source" />


        <EditTextPreference
            android:defaultValue=""
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:key="shfollow_user"
            android:maxLines="1"
            android:singleLine="true"
            android:summary="Login username for Dex Share Following"
            android:title="Share Username" />
        <EditTextPreference
            android:defaultValue=""
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:key="shfollow_pass"
            android:maxLines="1"
            android:singleLine="true"
            android:summary="Login password for Dex Share Following"
            android:title="Share Password" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="dex_share_us_acct"
            android:summary="Your account and follower app are from the USA"
            android:title="US Servers" />

        <ListPreference
            android:defaultValue="gb"
            android:entries="@array/carelinkCountryEntries"
            android:entryValues="@array/carelinkCountryValues"
            android:key="clfollow_country"
            android:summary="@string/summary_clfollow_country"
            android:title="@string/title_clfollow_country" />
        <EditTextPreference
            android:defaultValue=""
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:key="clfollow_patient"
            android:maxLines="1"
            android:singleLine="true"
            android:summary="@string/summary_clfollow_patient"
            android:title="@string/title_clfollow_patient" />
        <Preference
            android:key="clfollow_login"
            android:summary="@string/summary_clfollow_login"
            android:title="@string/title_clfollow_login">
        </Preference>
        <EditTextPreference
            android:defaultValue="30"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:key="clfollow_grace_period"
            android:maxLines="1"
            android:singleLine="true"
            android:summary="@string/summary_clfollow_grace_period"
            android:title="@string/title_clfollow_grace_period" />
        <EditTextPreference
            android:defaultValue="1"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:key="clfollow_missed_poll_interval"
            android:maxLines="1"
            android:singleLine="true"
            android:summary="@string/summary_clfollow_missed_poll_interval"
            android:title="@string/title_clfollow_missed_poll_interval" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="clfollow_download_finger_bgs"
            android:summary="@string/summary_clfollow_download_finger_bgs"
            android:title="@string/title_clfollow_download_finger_bgs" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="clfollow_download_boluses"
            android:summary="@string/summary_clfollow_download_boluses"
            android:title="@string/title_clfollow_download_boluses" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="clfollow_download_meals"
            android:summary="@string/summary_clfollow_download_meals"
            android:title="@string/title_clfollow_download_meals" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="clfollow_download_notifications"
            android:summary="@string/summary_clfollow_download_notifications"
            android:title="@string/title_clfollow_download_notifications" />
    </PreferenceCategory>
</PreferenceScreen>
