<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory
        android:key="dataSync"
        android:title="@string/data_sync">
        <PreferenceScreen
            android:icon="@drawable/ic_qrscan"
            android:key="auto_config_top"
            android:summary="@string/prefs_auto_config_summary"
            android:title="@string/auto_configure_title">
            <PreferenceScreen
                android:key="auto_configure"
                android:summary="@string/auto_config_cam_summary"
                android:title="@string/auto_config_cam_title" />
            <PreferenceScreen
                android:key="qr_code_from_file"
                android:summary="@string/auto_config_image_summary"
                android:title="@string/auto_config_image_title" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>
