<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/showhelp"
        android:title="@string/show_help"
        android:checkable="false"
        android:orderInCategory="1"
        android:visible="false"
        android:onClick="showHelpFromMenu"
        android:showAsAction="never"/>

    <item android:id="@+id/showreminders"
        android:title="@string/reminders"
        android:checkable="false"
        android:orderInCategory="1"
        android:visible="false"
        android:onClick="showRemindersFromMenu"
        android:showAsAction="never"/>


    <item android:id="@+id/export_submenu"
        android:title="@string/export_submenu"
        android:orderInCategory="1">

        <menu>
            <item
                android:id="@+id/cloud_backup"
                android:title="@string/cloud_backup"
                android:checkable="false"
                android:orderInCategory="1"
                android:onClick="cloudBackup"
                android:showAsAction="never"/>

            <item android:id="@+id/action_export_database"
                android:title="@string/menu_export_database"
                android:checkable="false"
                android:orderInCategory="1"
                android:onClick="exportDatabase"
                android:showAsAction="never"/>

            <item android:id="@+id/action_import_db"
                android:title="@string/menu_import_db"
                android:checkable="false"
                android:orderInCategory="1"
                android:onClick="restoreDatabase"
                android:showAsAction="never"/>

            <item android:id="@+id/importsettings"
                android:title="@string/load_save_settings_on_sdcard"
                android:checkable="false"
                android:onClick="settingsSDcardExport"
                android:visible="true"
                android:orderInCategory="1"
                android:showAsAction="never"/>
        </menu>
    </item>

    <item android:id="@+id/deleteAllBG"
        android:title="@string/delete_all_bg_readings"
        android:checkable="false"
        android:orderInCategory="1"
        android:onClick="deleteAllBG"
        android:visible="false"
        android:showAsAction="never"/>

    <item android:id="@+id/testFeature"
        android:title="@string/debugging_test_feature"
        android:checkable="false"
        android:orderInCategory="1"
        android:onClick="testFeature"
        android:visible="false"
        android:showAsAction="never"/>

    <item android:id="@+id/crowdtranslate"
        android:title="@string/crowd_sourced_translation"
        android:checkable="false"
        android:orderInCategory="1"
        android:onClick="crowdTranslate"
        android:visible="true"
        android:showAsAction="never"/>

    <item android:id="@+id/userEvents"
        android:title="@string/view_events_log"
        android:checkable="false"
        android:orderInCategory="1"
        android:onClick="viewEventLog"
        android:visible="true"
        android:showAsAction="never"/>
    
    <item android:id="@+id/synctreatments"
        android:title="@string/sync_treatments"
        android:checkable="false"
        android:orderInCategory="1"
        android:visible="false"
        android:showAsAction="never"/>

    <item android:id="@+id/sharemyconfig"
        android:title="@string/share_config_via_qr_code"
        android:icon="@drawable/ic_qrcode_grey600_48dp"
        android:checkable="false"
        android:orderInCategory="1"
        android:onClick="shareMyConfig"
        android:showAsAction="never"/>

    <item android:id="@+id/checkforupdate"
        android:title="@string/check_for_updated_version"
        android:checkable="false"
        android:orderInCategory="1"
        android:onClick="checkForUpdate"
        android:showAsAction="never"/>

    <item android:id="@+id/sendfeedback"
        android:title="@string/send_feedback_to_developer"
        android:checkable="false"
        android:orderInCategory="1"
        android:onClick="sendFeedback"
        android:showAsAction="never"/>

</menu>
